Refactor API and remove Toolset Repositories
